--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "wavesurfer.js": "^3.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
